--- a/README.textile
+++ b/README.textile
@@ -28,6 +28,8 @@ h3. <a name="options" />Options
 
 |*Member*|*Type*|*Default*|*Notes*|
 |break|@boolean@|true|Convert single-line linebreaks to @<br>@.|
+|cssClassOriginalLineNumber|@string@|''|Add this CSS class name, to each elements of HTML output, mapped to a the line numbers of input text.
+Works only when @showOriginalLineNumber@ option is enabled.|
 |lineOffset|@integer@|0|Line number offset of the first char in input text, for @showOriginalLineNumber@ option.|
 |showOriginalLineNumber|@boolean@|false|Maps the elements of HTML output, with the line numbers of input text.
 An HTML attribute @data-line@ is added to the HTML block elements. It's value is the line number in input text, of the first char of text inside that HTML block.|
