--- a/README.textile
+++ b/README.textile
@@ -2,7 +2,9 @@ h1. textile.js
 
 Attempt at an implementation of fully featured Textile parser in JavaScript that runs reasonably fast and mostly avoids outputting broken HTML.
 
-Give it a go in "a live textile web editor":http://borgar.github.com/textile-js/.
+**Please Note :** This is a fork containing some changes and fixes, used for my Visual Studio Code extension "Textile Language Features":https://github.com/GehDoc/vscode-textile-preview.  
+
+Give it a go in "a live textile web editor":https://gehdoc.github.io/textile-js/.
 
 
 h2. Install
