--- a/README.textile
+++ b/README.textile
@@ -4,7 +4,8 @@ Attempt at an implementation of fully featured Textile parser in JavaScript that
 
 **Please Note :** This is a fork containing some changes and fixes, used for my Visual Studio Code extension "Textile Language Features":https://github.com/GehDoc/vscode-textile-preview :
 * map each HTML output tag, to the corresponding source code line;
-* fix for bug "borgar/textile-js#52":https://github.com/borgar/textile-js/issues/52.
+* fix for bug "borgar/textile-js#52":https://github.com/borgar/textile-js/issues/52;
+* add a configurable hook, to modify JsonML nodes before rendering to HTML.
 
 Give it a go in "a live textile web editor":https://gehdoc.github.io/textile-js/.
 
@@ -37,6 +38,8 @@ Works only when @showOriginalLineNumber@ option is enabled.|
 |lineOffset|@integer@|0|Line number offset of the first char in input text, for @showOriginalLineNumber@ option.|
 |showOriginalLineNumber|@boolean@|false|Maps the elements of HTML output, with the line numbers of input text.
 An HTML attribute @data-line@ is added to the HTML block elements. It's value is the line number in input text, of the first char of text inside that HTML block.|
+|hooks|@[ function(jsonml :any[], param? :any) :any[], param? :any ]@|@[]@|Array of function (and optional initial parameter), applied in the order of the array to each JsonML node before rendering to HTML.
+Each function returns the modified JsonML tree.|
 
 h2. Usage
 
