[DOC] Reorder and correct hooks documentation

--- a/README.textile
+++ b/README.textile
@@ -35,11 +35,18 @@ h3. <a name="options" />Options
 |break|@boolean@|true|Convert single-line linebreaks to @<br>@.|
 |cssClassOriginalLineNumber|@string@|''|Add this CSS class name, to each elements of HTML output, mapped to a the line numbers of input text.
 Works only when @showOriginalLineNumber@ option is enabled.|
+|hooks|<pre><code>[
+  function(
+    jsonml :any[],
+    param :any OR undefined,
+    Nodelevel :number
+  ) :any[],
+  param? :any
+]</code></pre>|@[]@|Array of function (and optional initial parameter), applied in the order of the array to each JsonML node before rendering to HTML.
+The function receives a JsonML node (JsonML sub-tree), and returns it with modifications.|
 |lineOffset|@integer@|0|Line number offset of the first char in input text, for @showOriginalLineNumber@ option.|
 |showOriginalLineNumber|@boolean@|false|Maps the elements of HTML output, with the line numbers of input text.
 An HTML attribute @data-line@ is added to the HTML block elements. It's value is the line number in input text, of the first char of text inside that HTML block.|
-|hooks|@[ function(jsonml :any[], param :any | undefined, Nodelevel :number) :any[], param? :any ]@|@[]@|Array of function (and optional initial parameter), applied in the order of the array to each JsonML node before rendering to HTML.
-Each function returns the modified JsonML tree.|
 
 h2. Usage
 
